Add final map with Markers

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -263,105 +263,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "22.2855,114.1577\n",
       "Retrieving Results for Index 6: Hong Kong.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Mini Hotel Central.\n",
       "------------\n",
+      "-5.1241,120.253\n",
       "Retrieving Results for Index 22: Sinjai.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Wisma Sandika.\n",
       "------------\n",
+      "-17.8919,-39.3719\n",
       "Retrieving Results for Index 62: Nova Viçosa.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Pousada Porto do Sol.\n",
       "------------\n",
+      "-20.2833,44.2833\n",
       "Retrieving Results for Index 69: Morondava.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is La Case Bambou.\n",
       "------------\n",
+      "-8.5833,116.1167\n",
       "Retrieving Results for Index 79: Mataram.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Hotel Santika Mataram.\n",
       "------------\n",
+      "17.4924,44.1277\n",
       "Retrieving Results for Index 125: Najrān.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is محمد هادي ال فطيح.\n",
       "------------\n",
+      "-21.4803,-56.1381\n",
       "Retrieving Results for Index 158: Jardim.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Estancia Hotel - Jardim MS.\n",
       "------------\n",
+      "7.86,80.6517\n",
       "Retrieving Results for Index 182: Dambulla.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Tinaya Treats.\n",
       "------------\n",
+      "34.4506,40.9171\n",
       "Retrieving Results for Index 204: Abu Kamal.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is محطة التلفاز.\n",
       "------------\n",
+      "28.8947,64.4101\n",
       "Retrieving Results for Index 205: Dalbandin.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Sanjrani House.\n",
       "------------\n",
+      "-38.0023,-57.5575\n",
       "Retrieving Results for Index 235: Mar del Plata.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Gran Hotel Mar del Plata.\n",
       "------------\n",
+      "-9.6658,-35.7353\n",
       "Retrieving Results for Index 312: Maceió.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Poutur Pousada.\n",
       "------------\n",
+      "7.4688,80.0401\n",
       "Retrieving Results for Index 341: Kuliyapitiya.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Rest House.\n",
       "------------\n",
+      "7.4167,81.8167\n",
       "Retrieving Results for Index 365: Kalmunai.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is VS Villa.\n",
       "------------\n",
+      "-8.112,115.0882\n",
       "Retrieving Results for Index 377: Singaraja.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Puri Bagus Lovina Resort.\n",
       "------------\n",
+      "5.9749,116.0724\n",
       "Retrieving Results for Index 379: Kota Kinabalu.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Gaya Centre Hotel.\n",
       "------------\n",
+      "-21.6403,-41.0511\n",
       "Retrieving Results for Index 398: São João da Barra.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Pousada Porto De Canoas.\n",
       "------------\n",
+      "25.0209,118.2898\n",
       "Retrieving Results for Index 402: Dayong.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Haiyue Express Hotel.\n",
       "------------\n",
+      "-15.8233,-50.6133\n",
       "Retrieving Results for Index 405: Itapirapuã.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Hotel Nossa Senhora Aparecida.\n",
       "------------\n",
+      "-5.3582,104.9744\n",
       "Retrieving Results for Index 424: Pringsewu.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Urban Style by Front One.\n",
       "------------\n",
+      "32.2177,-82.4135\n",
       "Retrieving Results for Index 430: Vidalia.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Quality Inn & Suites.\n",
       "------------\n",
+      "31.6253,71.0657\n",
       "Retrieving Results for Index 437: Bhakkar.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Gorcha Nashaib.\n",
       "------------\n",
+      "-8.8978,-35.1478\n",
       "Retrieving Results for Index 451: São José da Coroa Grande.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Crôa Mares Hotel.\n",
       "------------\n",
+      "26.3667,86.0833\n",
       "Retrieving Results for Index 452: Madhubani.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Hotel Raj Vilas.\n",
       "------------\n",
+      "-25.1667,45.05\n",
       "Retrieving Results for Index 483: Beloha.\n",
       "Missing field/result... skipping.\n",
       "------------\n",
+      "29.5542,66.0215\n",
       "Retrieving Results for Index 517: Nushki.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Jahangir Hotel Noshki.\n",
       "------------\n",
+      "-15.1961,12.1522\n",
       "Retrieving Results for Index 536: Mossamedes.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Hotel Chik Chik Namibe.\n",
       "------------\n",
+      "-15.8631,-38.8828\n",
       "Retrieving Results for Index 538: Belmonte.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Pousada Monte Carmelo O Pão.\n",
       "------------\n",
+      "25.5559,89.6715\n",
       "Retrieving Results for Index 539: Chilmāri.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Mahi telecom.\n",
       "------------\n",
+      "-34.426,-58.5796\n",
       "Retrieving Results for Index 557: Tigre.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is Puerto Delta Apartamentos.\n",
       "------------\n",
+      "-8.19,114.9675\n",
       "Retrieving Results for Index 568: Banjar.\n",
-      "Missing field/result... skipping.\n",
+      "Closest hotel is The Hamsa Resort.\n",
       "------------\n"
      ]
     }
@@ -371,7 +402,6 @@
     "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "params = {\n",
     "    \"radius\" : 5000,\n",
-    "    \"rankby\": \"distance\",\n",
     "    \"type\": \"lodging\",\n",
     "    \"key\" : g_key\n",
     "}\n",
@@ -381,6 +411,7 @@
     "    lng = row['Lng']\n",
     "    # add keyword to params dict\n",
     "    params[\"location\"] = f\"{lat},{lng}\"\n",
+    "    print(params[\"location\"])\n",
     "    # assemble url and make API request\n",
     "    print(f\"Retrieving Results for Index {index}: {row['City']}.\")\n",
     "    response = requests.get(base_url, params=params).json()\n",
@@ -398,14 +429,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "           City Country      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "6     Hong Kong      HK  22.2855  114.1577     78.01        87          20   \n",
+       "22       Sinjai      ID  -5.1241  120.2530     73.29        91          21   \n",
+       "62  Nova Viçosa      BR -17.8919  -39.3719     75.56        82          15   \n",
+       "69    Morondava      MG -20.2833   44.2833     75.09        82           0   \n",
+       "79      Mataram      ID  -8.5833  116.1167     73.40        94          20   \n",
+       "\n",
+       "    Wind Speed        Date             Hotel Name  \n",
+       "6         3.00  1619213704     Mini Hotel Central  \n",
+       "22        4.14  1619213872          Wisma Sandika  \n",
+       "62        9.84  1619213886   Pousada Porto do Sol  \n",
+       "69        6.40  1619213889         La Case Bambou  \n",
+       "79        4.34  1619213893  Hotel Santika Mataram  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Country</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Date</th>\n      <th>Hotel Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>6</th>\n      <td>Hong Kong</td>\n      <td>HK</td>\n      <td>22.2855</td>\n      <td>114.1577</td>\n      <td>78.01</td>\n      <td>87</td>\n      <td>20</td>\n      <td>3.00</td>\n      <td>1619213704</td>\n      <td>Mini Hotel Central</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>Sinjai</td>\n      <td>ID</td>\n      <td>-5.1241</td>\n      <td>120.2530</td>\n      <td>73.29</td>\n      <td>91</td>\n      <td>21</td>\n      <td>4.14</td>\n      <td>1619213872</td>\n      <td>Wisma Sandika</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>Nova Viçosa</td>\n      <td>BR</td>\n      <td>-17.8919</td>\n      <td>-39.3719</td>\n      <td>75.56</td>\n      <td>82</td>\n      <td>15</td>\n      <td>9.84</td>\n      <td>1619213886</td>\n      <td>Pousada Porto do Sol</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>Morondava</td>\n      <td>MG</td>\n      <td>-20.2833</td>\n      <td>44.2833</td>\n      <td>75.09</td>\n      <td>82</td>\n      <td>0</td>\n      <td>6.40</td>\n      <td>1619213889</td>\n      <td>La Case Bambou</td>\n    </tr>\n    <tr>\n      <th>79</th>\n      <td>Mataram</td>\n      <td>ID</td>\n      <td>-8.5833</td>\n      <td>116.1167</td>\n      <td>73.40</td>\n      <td>94</td>\n      <td>20</td>\n      <td>4.34</td>\n      <td>1619213893</td>\n      <td>Hotel Santika Mataram</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
+   "source": [
+    "hotel_df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,14 +484,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Figure(layout=FigureLayout(height='420px'))",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "96b3acf7f51f4be3a163c8f8b2f3c826"
+      }
+     },
+     "metadata": {}
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "fig = gmaps.figure()\n",
+    "markers = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(markers)\n",
     "\n",
     "\n",
-    "# Display figure\n"
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
