--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Country</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Qaanaaq</td>\n      <td>GL</td>\n      <td>77.4840</td>\n      <td>-69.3632</td>\n      <td>22.28</td>\n      <td>83</td>\n      <td>100</td>\n      <td>4.63</td>\n      <td>1619213770</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Provideniya</td>\n      <td>RU</td>\n      <td>64.3833</td>\n      <td>-173.3000</td>\n      <td>40.23</td>\n      <td>57</td>\n      <td>81</td>\n      <td>4.12</td>\n      <td>1619213805</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Asău</td>\n      <td>RO</td>\n      <td>46.4333</td>\n      <td>26.4000</td>\n      <td>37.99</td>\n      <td>70</td>\n      <td>38</td>\n      <td>2.98</td>\n      <td>1619213866</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Djambala</td>\n      <td>CG</td>\n      <td>-2.5447</td>\n      <td>14.7533</td>\n      <td>69.76</td>\n      <td>91</td>\n      <td>93</td>\n      <td>2.15</td>\n      <td>1619213866</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Nemuro</td>\n      <td>JP</td>\n      <td>43.3236</td>\n      <td>145.5750</td>\n      <td>39.83</td>\n      <td>81</td>\n      <td>100</td>\n      <td>15.77</td>\n      <td>1619213837</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>568</th>\n      <td>Banjar</td>\n      <td>ID</td>\n      <td>-8.1900</td>\n      <td>114.9675</td>\n      <td>77.00</td>\n      <td>83</td>\n      <td>20</td>\n      <td>3.44</td>\n      <td>1619214085</td>\n    </tr>\n    <tr>\n      <th>569</th>\n      <td>Fremont</td>\n      <td>US</td>\n      <td>37.5483</td>\n      <td>-121.9886</td>\n      <td>66.99</td>\n      <td>55</td>\n      <td>1</td>\n      <td>12.66</td>\n      <td>1619214086</td>\n    </tr>\n    <tr>\n      <th>570</th>\n      <td>Kadirli</td>\n      <td>TR</td>\n      <td>37.3739</td>\n      <td>36.0961</td>\n      <td>66.00</td>\n      <td>74</td>\n      <td>93</td>\n      <td>4.79</td>\n      <td>1619214086</td>\n    </tr>\n    <tr>\n      <th>571</th>\n      <td>Larsnes</td>\n      <td>NO</td>\n      <td>62.2028</td>\n      <td>5.5773</td>\n      <td>35.01</td>\n      <td>85</td>\n      <td>85</td>\n      <td>1.01</td>\n      <td>1619214086</td>\n    </tr>\n    <tr>\n      <th>572</th>\n      <td>Pitimbu</td>\n      <td>BR</td>\n      <td>-7.4706</td>\n      <td>-34.8086</td>\n      <td>80.60</td>\n      <td>83</td>\n      <td>40</td>\n      <td>6.91</td>\n      <td>1619214087</td>\n    </tr>\n  </tbody>\n</table>\n<p>573 rows × 9 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 12
     }
    ],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7def40efad01436299837c5da2c942ed"
+       "model_id": "8e14fd9c0cbe4387991bfdef07048aaa"
       }
      },
      "metadata": {}
@@ -135,7 +135,7 @@
     "#Plot Heatmap\n",
     "fig = gmaps.figure()\n",
     "#Create Heatlayer\n",
-    "heat_layer = gmaps.heatmap_layer(locations, humid, dissipating=False, max_intensity=10, point_radius=1)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, humid, dissipating=False, max_intensity=100, point_radius=1)\n",
     "\n",
     "#Add layer\n",
     "fig.add_layer(heat_layer)\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Country</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>6</th>\n      <td>Hong Kong</td>\n      <td>HK</td>\n      <td>22.2855</td>\n      <td>114.1577</td>\n      <td>78.01</td>\n      <td>87</td>\n      <td>20</td>\n      <td>3.00</td>\n      <td>1619213704</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>Sinjai</td>\n      <td>ID</td>\n      <td>-5.1241</td>\n      <td>120.2530</td>\n      <td>73.29</td>\n      <td>91</td>\n      <td>21</td>\n      <td>4.14</td>\n      <td>1619213872</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>Nova Viçosa</td>\n      <td>BR</td>\n      <td>-17.8919</td>\n      <td>-39.3719</td>\n      <td>75.56</td>\n      <td>82</td>\n      <td>15</td>\n      <td>9.84</td>\n      <td>1619213886</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>Morondava</td>\n      <td>MG</td>\n      <td>-20.2833</td>\n      <td>44.2833</td>\n      <td>75.09</td>\n      <td>82</td>\n      <td>0</td>\n      <td>6.40</td>\n      <td>1619213889</td>\n    </tr>\n    <tr>\n      <th>79</th>\n      <td>Mataram</td>\n      <td>ID</td>\n      <td>-8.5833</td>\n      <td>116.1167</td>\n      <td>73.40</td>\n      <td>94</td>\n      <td>20</td>\n      <td>4.34</td>\n      <td>1619213893</td>\n    </tr>\n    <tr>\n      <th>125</th>\n      <td>Najrān</td>\n      <td>SA</td>\n      <td>17.4924</td>\n      <td>44.1277</td>\n      <td>75.20</td>\n      <td>22</td>\n      <td>0</td>\n      <td>2.51</td>\n      <td>1619213909</td>\n    </tr>\n    <tr>\n      <th>158</th>\n      <td>Jardim</td>\n      <td>BR</td>\n      <td>-21.4803</td>\n      <td>-56.1381</td>\n      <td>79.20</td>\n      <td>41</td>\n      <td>3</td>\n      <td>2.48</td>\n      <td>1619213815</td>\n    </tr>\n    <tr>\n      <th>182</th>\n      <td>Dambulla</td>\n      <td>LK</td>\n      <td>7.8600</td>\n      <td>80.6517</td>\n      <td>73.17</td>\n      <td>88</td>\n      <td>3</td>\n      <td>3.06</td>\n      <td>1619213930</td>\n    </tr>\n    <tr>\n      <th>204</th>\n      <td>Abu Kamal</td>\n      <td>SY</td>\n      <td>34.4506</td>\n      <td>40.9171</td>\n      <td>75.85</td>\n      <td>17</td>\n      <td>14</td>\n      <td>6.60</td>\n      <td>1619213876</td>\n    </tr>\n    <tr>\n      <th>205</th>\n      <td>Dalbandin</td>\n      <td>PK</td>\n      <td>28.8947</td>\n      <td>64.4101</td>\n      <td>76.60</td>\n      <td>8</td>\n      <td>0</td>\n      <td>4.14</td>\n      <td>1619213940</td>\n    </tr>\n    <tr>\n      <th>235</th>\n      <td>Mar del Plata</td>\n      <td>AR</td>\n      <td>-38.0023</td>\n      <td>-57.5575</td>\n      <td>71.60</td>\n      <td>78</td>\n      <td>0</td>\n      <td>6.91</td>\n      <td>1619213951</td>\n    </tr>\n    <tr>\n      <th>312</th>\n      <td>Maceió</td>\n      <td>BR</td>\n      <td>-9.6658</td>\n      <td>-35.7353</td>\n      <td>78.80</td>\n      <td>83</td>\n      <td>0</td>\n      <td>6.91</td>\n      <td>1619213980</td>\n    </tr>\n    <tr>\n      <th>341</th>\n      <td>Kuliyapitiya</td>\n      <td>LK</td>\n      <td>7.4688</td>\n      <td>80.0401</td>\n      <td>78.80</td>\n      <td>94</td>\n      <td>20</td>\n      <td>2.30</td>\n      <td>1619213991</td>\n    </tr>\n    <tr>\n      <th>365</th>\n      <td>Kalmunai</td>\n      <td>LK</td>\n      <td>7.4167</td>\n      <td>81.8167</td>\n      <td>79.74</td>\n      <td>81</td>\n      <td>2</td>\n      <td>1.52</td>\n      <td>1619213708</td>\n    </tr>\n    <tr>\n      <th>377</th>\n      <td>Singaraja</td>\n      <td>ID</td>\n      <td>-8.1120</td>\n      <td>115.0882</td>\n      <td>76.60</td>\n      <td>70</td>\n      <td>3</td>\n      <td>4.21</td>\n      <td>1619214011</td>\n    </tr>\n    <tr>\n      <th>379</th>\n      <td>Kota Kinabalu</td>\n      <td>MY</td>\n      <td>5.9749</td>\n      <td>116.0724</td>\n      <td>77.00</td>\n      <td>94</td>\n      <td>20</td>\n      <td>2.30</td>\n      <td>1619214012</td>\n    </tr>\n    <tr>\n      <th>398</th>\n      <td>São João da Barra</td>\n      <td>BR</td>\n      <td>-21.6403</td>\n      <td>-41.0511</td>\n      <td>77.00</td>\n      <td>65</td>\n      <td>0</td>\n      <td>9.22</td>\n      <td>1619214019</td>\n    </tr>\n    <tr>\n      <th>402</th>\n      <td>Dayong</td>\n      <td>CN</td>\n      <td>25.0209</td>\n      <td>118.2898</td>\n      <td>71.60</td>\n      <td>73</td>\n      <td>20</td>\n      <td>4.47</td>\n      <td>1619214021</td>\n    </tr>\n    <tr>\n      <th>405</th>\n      <td>Itapirapuã</td>\n      <td>BR</td>\n      <td>-15.8233</td>\n      <td>-50.6133</td>\n      <td>72.05</td>\n      <td>51</td>\n      <td>2</td>\n      <td>0.65</td>\n      <td>1619214022</td>\n    </tr>\n    <tr>\n      <th>424</th>\n      <td>Pringsewu</td>\n      <td>ID</td>\n      <td>-5.3582</td>\n      <td>104.9744</td>\n      <td>71.65</td>\n      <td>95</td>\n      <td>9</td>\n      <td>4.18</td>\n      <td>1619214031</td>\n    </tr>\n    <tr>\n      <th>430</th>\n      <td>Vidalia</td>\n      <td>US</td>\n      <td>32.2177</td>\n      <td>-82.4135</td>\n      <td>73.40</td>\n      <td>27</td>\n      <td>1</td>\n      <td>3.44</td>\n      <td>1619214033</td>\n    </tr>\n    <tr>\n      <th>437</th>\n      <td>Bhakkar</td>\n      <td>PK</td>\n      <td>31.6253</td>\n      <td>71.0657</td>\n      <td>72.93</td>\n      <td>32</td>\n      <td>0</td>\n      <td>6.20</td>\n      <td>1619214035</td>\n    </tr>\n    <tr>\n      <th>451</th>\n      <td>São José da Coroa Grande</td>\n      <td>BR</td>\n      <td>-8.8978</td>\n      <td>-35.1478</td>\n      <td>78.98</td>\n      <td>79</td>\n      <td>7</td>\n      <td>7.58</td>\n      <td>1619213792</td>\n    </tr>\n    <tr>\n      <th>452</th>\n      <td>Madhubani</td>\n      <td>IN</td>\n      <td>26.3667</td>\n      <td>86.0833</td>\n      <td>78.30</td>\n      <td>23</td>\n      <td>23</td>\n      <td>3.42</td>\n      <td>1619214040</td>\n    </tr>\n    <tr>\n      <th>483</th>\n      <td>Beloha</td>\n      <td>MG</td>\n      <td>-25.1667</td>\n      <td>45.0500</td>\n      <td>70.34</td>\n      <td>76</td>\n      <td>21</td>\n      <td>9.28</td>\n      <td>1619214052</td>\n    </tr>\n    <tr>\n      <th>517</th>\n      <td>Nushki</td>\n      <td>PK</td>\n      <td>29.5542</td>\n      <td>66.0215</td>\n      <td>73.35</td>\n      <td>15</td>\n      <td>0</td>\n      <td>0.49</td>\n      <td>1619213858</td>\n    </tr>\n    <tr>\n      <th>536</th>\n      <td>Mossamedes</td>\n      <td>AO</td>\n      <td>-15.1961</td>\n      <td>12.1522</td>\n      <td>78.22</td>\n      <td>77</td>\n      <td>0</td>\n      <td>4.14</td>\n      <td>1619214072</td>\n    </tr>\n    <tr>\n      <th>538</th>\n      <td>Belmonte</td>\n      <td>BR</td>\n      <td>-15.8631</td>\n      <td>-38.8828</td>\n      <td>78.80</td>\n      <td>73</td>\n      <td>0</td>\n      <td>9.22</td>\n      <td>1619214073</td>\n    </tr>\n    <tr>\n      <th>539</th>\n      <td>Chilmāri</td>\n      <td>BD</td>\n      <td>25.5559</td>\n      <td>89.6715</td>\n      <td>77.74</td>\n      <td>35</td>\n      <td>19</td>\n      <td>9.10</td>\n      <td>1619214073</td>\n    </tr>\n    <tr>\n      <th>557</th>\n      <td>Tigre</td>\n      <td>AR</td>\n      <td>-34.4260</td>\n      <td>-58.5796</td>\n      <td>75.00</td>\n      <td>68</td>\n      <td>0</td>\n      <td>5.75</td>\n      <td>1619214080</td>\n    </tr>\n    <tr>\n      <th>568</th>\n      <td>Banjar</td>\n      <td>ID</td>\n      <td>-8.1900</td>\n      <td>114.9675</td>\n      <td>77.00</td>\n      <td>83</td>\n      <td>20</td>\n      <td>3.44</td>\n      <td>1619214085</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 15
     }
    ],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Country</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Date</th>\n      <th>Hotel Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>6</th>\n      <td>Hong Kong</td>\n      <td>HK</td>\n      <td>22.2855</td>\n      <td>114.1577</td>\n      <td>78.01</td>\n      <td>87</td>\n      <td>20</td>\n      <td>3.00</td>\n      <td>1619213704</td>\n      <td>Mini Hotel Central</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>Sinjai</td>\n      <td>ID</td>\n      <td>-5.1241</td>\n      <td>120.2530</td>\n      <td>73.29</td>\n      <td>91</td>\n      <td>21</td>\n      <td>4.14</td>\n      <td>1619213872</td>\n      <td>Wisma Sandika</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>Nova Viçosa</td>\n      <td>BR</td>\n      <td>-17.8919</td>\n      <td>-39.3719</td>\n      <td>75.56</td>\n      <td>82</td>\n      <td>15</td>\n      <td>9.84</td>\n      <td>1619213886</td>\n      <td>Pousada Porto do Sol</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>Morondava</td>\n      <td>MG</td>\n      <td>-20.2833</td>\n      <td>44.2833</td>\n      <td>75.09</td>\n      <td>82</td>\n      <td>0</td>\n      <td>6.40</td>\n      <td>1619213889</td>\n      <td>La Case Bambou</td>\n    </tr>\n    <tr>\n      <th>79</th>\n      <td>Mataram</td>\n      <td>ID</td>\n      <td>-8.5833</td>\n      <td>116.1167</td>\n      <td>73.40</td>\n      <td>94</td>\n      <td>20</td>\n      <td>4.34</td>\n      <td>1619213893</td>\n      <td>Hotel Santika Mataram</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 17
     }
    ],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "96b3acf7f51f4be3a163c8f8b2f3c826"
+       "model_id": "58677f8007d04981bfff405fc30c0fea"
       }
      },
      "metadata": {}
@@ -521,8 +521,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd06a262ddcb5f1da0e4fa74e20e93c8f5a5c260b7f3cec5f023a72d50d0a06227c",
-   "display_name": "Python 3.8.5 64-bit ('Tang': virtualenv)"
+   "name": "python3610jvsc74a57bd0b432461d0a0115d0c9d901da8da6cafa7da0264c25770543bb182d5a47b20b85",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -534,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.6.10-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
